Agregando Boton Dark Mode

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -10,8 +10,9 @@
     .navegacion {
         visibility: visible;
         opacity: 1;
+        height: auto;
     }
-    
+
     .copyright {
         color: $blanco;
         text-align: center;
