--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -38,7 +38,8 @@
 
     visibility: hidden;
     opacity: 0;
-    transition: visibility .3s ease-in-out, opacity 0.5s linear;
+    height: 0;
+    transition: visibility .3s ease-in-out, opacity 0.5s linear, height 0.5s linear;
 
     @include tablet {
         display: flex;
@@ -76,4 +77,5 @@
 .mostrar {
     visibility: visible;
     opacity: 1;
+    height: auto;
 }
