--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -14,14 +14,22 @@
         background-position: center center;
         background-size: cover;
          @include tablet {
-            min-height: 70rem;
+            min-height: 50rem;
         }
 
         .contenido-header {
             @include tablet {
-                min-height: 70rem;
+                min-height: 50rem;
             }
         }
+    }
+    .titulo {
+        text-align: center;
+        color: $blanco;
+        font-size: 2.8rem;
+    }
+    .none {
+        visibility: hidden;
     }
 }
 
